codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__slash_commands__mcp_manager_loading_popup.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 2250
expression: "render_bottom_popup(&chat, 80)"
---
  MCP servers
  Loading configured servers and authentication...

›    Loading MCP servers...  This updates when the server list is ready.

  Press enter to confirm or esc to go back
