codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__slash_commands__mcp_manager_oauth_actions_popup.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 2335
expression: "render_bottom_popup(&chat, 80)"
---
  MCP server
  github
  Authentication: Sign-in required

› 1. Authenticate with OAuth   Codex will open your browser and report when
                               authentication finishes.
  2. View tools and resources  0 tools · 0 resources · 0 templates

  Press enter to confirm or esc to go back
