codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__slash_commands__mcp_manager_oauth_waiting_popup.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "render_bottom_popup(&chat, 80)"
---
  MCP server
  github
  Authentication: Waiting for browser sign-in…

     Waiting for browser sign-in…  Complete sign-in in your browser; this
                                   panel updates automatically.
› 1. View tools and resources      Open the inventory inside the MCP manager.

  Press enter to confirm or esc to go back
